<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pidownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/girl"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="monospace"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_label"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        app:startIconDrawable="@drawable/ic_url_24dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:strokeColor="@color/white"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/ic_cancel_24dp"
        app:endIconTint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txturl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btndownload"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:text="@string/button"
        android:textColor="@color/white"/>


    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:textSize="14sp"
        android:textAlignment="center" />
</LinearLayout>